// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dismissable label should render dismissable label 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiChip-root Label-root Label-icon Label-deleteIcon MuiChip-deletable"
      role="button"
      tabindex="0"
    >
      <span
        class="MuiChip-label"
      >
        <span
          class="Label-innerLabel"
        >
          Label
        </span>
      </span>
      <span
        aria-label="delete icon"
        class="MuiChip-deleteIcon"
        role="button"
      >
        <svg
          class="SvgCloseMinor16-root"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <defs>
            <path
              d="M8.707 8l3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5z"
              id="closeMinor16_svg__a"
            />
          </defs>
          <g
            fill-rule="evenodd"
          >
            <mask
              id="closeMinor16_svg__b"
            >
              <use
                xlink:href="#closeMinor16_svg__a"
              />
            </mask>
            <use
              fill-rule="nonzero"
              xlink:href="#closeMinor16_svg__a"
            />
            <g
              mask="url(#closeMinor16_svg__b)"
            >
              <path
                d="M0 0h16v16H0z"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders \`grey\` variant 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiChip-root Label-root Label-icon Label-deleteIcon"
    >
      <span
        class="MuiChip-label"
      >
        <span
          class="Label-innerLabel"
        >
          Label
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders \`white\` variant 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiChip-root Label-root Label-icon Label-deleteIcon Label-white"
    >
      <span
        class="MuiChip-label"
      >
        <span
          class="Label-innerLabel"
        >
          Label
        </span>
      </span>
    </div>
  </div>
</div>
`;
